--- a/templates/principal.html
+++ b/templates/principal.html
@@ -15,8 +15,8 @@
         <a href="/taxi-service"><button>TAXI</button></a>
         <a href="/turismo"><button>Turismo Local y Nacional</button></a>
         <a href="/alta-gama"><button>Alta Gama</button></a>
-        <a href="/fletes-mudanzas"><button>Fletes y Mudanzas</button></a>
-        <a href="/apoyo-hoteles"><button>Apoyo Hoteles</button></a>
+        <a href="/fletes_mudanzas"><button>Fletes y Mudanzas</button></a>
+        <a href="/apoyo_hoteles"><button>Apoyo Hoteles</button></a>
     </div>
     <footer>
         &copy; 2024 GAVVIP - Todos los derechos reservados.
