--- a/templates/alta_gama.html
+++ b/templates/alta_gama.html
@@ -48,7 +48,7 @@
 <body>
     <div class="container">
         <h1>Seleccione un Vehículo Alta Gama</h1>
-        <form action="/formulario-alta-gama" method="POST">
+        <form action="/formulario_alta_gama" method="POST">
             <button type="submit" name="vehiculo" value="Ford Expedition, V6, EcoBoost">Ford Expedition, V6, EcoBoost</button>
             <button type="submit" name="vehiculo" value="Toyota Fortuner 2.7, V6, TRD">Toyota Fortuner 2.7, V6, TRD</button>
             <button type="submit" name="vehiculo" value="Mitsubishi Outlander">Mitsubishi Outlander</button>
