--- a/templates/alta_gama.html
+++ b/templates/alta_gama.html
@@ -48,24 +48,13 @@
 <body>
     <div class="container">
         <h1>Seleccione un Vehículo Alta Gama</h1>
-        <form action="/formulario_alta_gama" method="POST">
+        <form action="/formulario-alta-gama" method="POST">
             <button type="submit" name="vehiculo" value="Ford Expedition, V6, EcoBoost">Ford Expedition, V6, EcoBoost</button>
             <button type="submit" name="vehiculo" value="Toyota Fortuner 2.7, V6, TRD">Toyota Fortuner 2.7, V6, TRD</button>
             <button type="submit" name="vehiculo" value="Mitsubishi Outlander">Mitsubishi Outlander</button>
             <button type="submit" name="vehiculo" value="Tiggo 7 Luxuri">Tiggo 7 Luxuri</button>
             <button type="submit" name="vehiculo" value="Land Rover Discovery (4X4 Recomendado)">Land Rover Discovery (4X4 Recomendado)</button>
         </form>
-<div style="text-align: center; margin-top: 20px;">
-    <a href="/" style="
-        text-decoration: none;
-        background-color: #4facfe;
-        color: white;
-        padding: 10px 20px;
-        border-radius: 5px;
-        font-size: 1em;
-        transition: background-color 0.3s ease;
-    ">Volver a la Página Principal</a>
-</div>
     </div>
 </body>
 </html>
