--- a/templates/principal.html
+++ b/templates/principal.html
@@ -14,7 +14,7 @@
 
         <a href="/taxi-service"><button>TAXI</button></a>
         <a href="/turismo"><button>Turismo Local y Nacional</button></a>
-        <a href="/alta gama"><button>Alta Gama</button></a>
+        <a href="/alta-gama"><button>Alta Gama</button></a>
         <a href="/fletes_mudanzas"><button>Fletes y Mudanzas</button></a>
         <a href="/apoyo_hoteles"><button>Apoyo Hoteles</button></a>
     </div>
