--- a/templates/formulario_alta_gama.html
+++ b/templates/formulario_alta_gama.html
@@ -23,12 +23,8 @@
         input, select, button {
             width: 100%;
             margin: 10px 0;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #FFD700;
-            border-radius: 5px;
-            color: #FFD700;
-            background-color: transparent;
+            padding: 10px
+
         }
         button:hover {
             background-color: #FFD700;
