--- a/templates/principal.html
+++ b/templates/principal.html
@@ -12,7 +12,7 @@
         <h1>¡Bienvenido a GAVVIP!</h1>
         <p>Selecciona una opción para continuar:</p>
 
-        <a href="/taxi-service"><button>TAXI</button></a>
+        <a href="/taxi-service"><button>Taxi</button></a>
         <a href="/turismo"><button>Turismo Local y Nacional</button></a>
         <a href="/alta-gama"><button>Alta Gama</button></a>
         <a href="/fletes-mudanzas"><button>Fletes y Mudanzas</button></a>
