--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,17 @@
 /* Estilo general */
-body {
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
     color: #FFD700; /* Dorado */
     text-align: center; /* Asegura que todo esté centrado */
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    flex: 1;
 }
 
 /* Fondo para la ventana emergente */
@@ -74,6 +81,12 @@ footer {
     margin: 20px 0;
     font-size: 14px;
     color: #FFD700;
+    position: absolute;
+    bottom: 10px; /* Ajusta el valor según sea necesario */
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    color: #FFFFFF; /* Mantén el color adecuado */
 }
 
 
