--- a/static/styles.css
+++ b/static/styles.css
@@ -86,7 +86,7 @@ footer {
     width: 100%;
     text-align: center;
     font-size: 14px;
-    color: #FFFFFF; /* Mantén el color adecuado */
+    color: #FFBA42; /* Mantén el color adecuado */
 }
 
 
