--- a/templates/taxi.html
+++ b/templates/taxi.html
@@ -13,11 +13,12 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            padding: 0 20px; /* Ajuste de espacio */
-            background: linear-gradient(to bottom, #001f3f, #004f7f);
+            padding: 0 20px;
+            background: url('/static/images/thx.png') no-repeat center center fixed;
+            background-size: cover;
         }
         .container {
-            background: rgba(0, 0, 0, 0.6); /* Transparente */
+            background: rgba(0, 0, 0, 0.5); /* Transparente */
             width: 90%;
             max-width: 400px;
             padding: 20px;
