--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -3,35 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gracias</title>
+    <title>¡Gracias!</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
-            background-image: url('pic.jpg');
-            background-size: cover;
-            background-position: center;
-            color: white;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
+            background: url('/static/images/spasiva.png') no-repeat center center fixed; /* Imagen de fondo */
+            background-size: cover; /* Cubre toda la pantalla */
+            color: #FFD700; /* Dorado */
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
+
         .container {
-            margin: 50px auto;
-            max-width: 600px;
-            background-color: rgba(0, 0, 0, 0.8);
-            border-radius: 10px;
+            background-color: rgba(0, 0, 0, 0.5); /* Transparencia para resaltar el texto */
             padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            max-width: 600px;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
         }
+
         h1 {
-            font-size: 24px;
+            font-size: 2em;
             margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 1.2em;
+        }
+
+        a {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            color: #001f3f; /* Azul oscuro */
+            background-color: #FFD700; /* Dorado */
+            text-decoration: none;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+        }
+
+        a:hover {
+            background-color: #FFBA42; /* Dorado oscuro */
+            color: #FFFFFF;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>{{ mensaje }}</h1>
+        <h1>¡Gracias por tu solicitud!</h1>
+        <p>Hemos recibido tu información y nos pondremos en contacto contigo en breve.</p>
+        <a href="/principal">Volver a la página principal</a>
     </div>
 </body>
 </html>
