--- a/static/styles.css
+++ b/static/styles.css
@@ -118,6 +118,30 @@ button:hover {
     color: #000;
 }
 
+/* Fondo para la ventana gracias.html */
+.background-gracias {
+    background: url('/static/images/spasiva.png') no-repeat center center fixed;
+    background-size: cover; /* Ajustar la imagen para cubrir toda la pantalla */
+    color: #FFD700; /* Texto dorado */
+    height: 100vh; /* Asegurar que cubre toda la ventana */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+/* Estilo del contenedor en gracias.html */
+.container-gracias {
+    background-color: rgba(0, 0, 0, 0.6); /* Transparencia para resaltar el texto */
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    max-width: 600px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+}
+
+
 h1 {
     color: #FFFFFF; /* Blanco óptico */
     font-family: 'Arial Bold', sans-serif;
