--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -4,63 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Gracias!</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: url('/static/images/spasiva.png') no-repeat center center fixed; /* Imagen de fondo */
-            background-size: cover; /* Cubre toda la pantalla */
-            color: #FFD700; /* Dorado */
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            background-color: rgba(0, 0, 0, 0.5); /* Transparencia para resaltar el texto */
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            max-width: 600px;
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-        }
-
-        h1 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 1.2em;
-        }
-
-        a {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 1.2em;
-            color: #001f3f; /* Azul oscuro */
-            background-color: #FFD700; /* Dorado */
-            text-decoration: none;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-        }
-
-        a:hover {
-            background-color: #FFBA42; /* Dorado oscuro */
-            color: #FFFFFF;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
-<body>
-    <div class="container">
+<body class="background-gracias">
+    <div class="container-gracias">
         <h1>¡Gracias por tu solicitud!</h1>
         <p>Hemos recibido tu información y nos pondremos en contacto contigo en breve.</p>
-        <a href="/principal">Volver a la página principal</a>
+        <a href="/principal" class="button">Volver a la página principal</a>
     </div>
 </body>
 </html>
