--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body class="background-gracias">
-    <div class="container-gracias">
+    <div class="container">
         <h1>¡Gracias por tu solicitud!</h1>
         <p>Hemos recibido tu información y nos pondremos en contacto contigo en breve.</p>
         <a href="/principal" class="button">Volver a la página principal</a>
