--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -6,11 +6,22 @@
     <title>¡Gracias!</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
-<body class="background-gracias">
+<body class="background-ventas">
     <div class="container">
         <h1>¡Gracias por tu solicitud!</h1>
-        <p>Hemos recibido tu información y nos pondremos en contacto contigo en breve.</p>
-        <a href="/principal" class="button">Volver a la página principal</a>
+        <p>Nos pondremos en contacto contigo pronto.</p>
+        <div style="text-align: center; margin-top: 20px;">
+            <a href="/principal" style="
+                text-decoration: none;
+                background-color: #FFD24C;
+                color: #495254;
+                padding: 10px 20px;
+                border-radius: 5px;
+                font-size: 1em;
+                font-weight: bold;
+                transition: background-color 0.3s ease;
+            ">Regresar al Menú Principal</a>
+        </div>
     </div>
 </body>
 </html>
