--- a/static/styles.css
+++ b/static/styles.css
@@ -118,18 +118,17 @@ button:hover {
     color: #000;
 }
 
-/* Estilo específico para la ventana gracias.html */
-.background-gracias {
+/* Fondo específico para la ventana gracias.html */
+.background-ventas {
     background: url('/static/images/spasiva.png') no-repeat center center fixed;
     background-size: cover;
-    height: 100vh; /* Asegura que ocupe toda la altura */
-    width: 100vw; /* Asegura que ocupe todo el ancho */
+    height: 100vh; /* Asegura que cubra toda la altura */
+    width: 100%; /* Asegura que cubra todo el ancho */
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #FFD700; /* Color del texto */
 }
 
 /* Estilo del contenedor en gracias.html */
